# caliphui

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: caliphui.js  caliphui_bg.wasm  index.html  manifest.json  sw.js
src/: app.rs  main.rs
