[package]
name = "caliphui"
version = "0.1.0"
authors = ["Peter Dunne <peter.dunne@applied-magnetism.com>"]
edition = "2018"
description = "A simple tool to calibrate and convert pH measurements using a two point method"
homepage = "https://www.applied-magnetism.com/"
repository = "https://github.com/pdunne/caliphui"
readme = "README.md"
categories = ["mathematics", "science"]
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.15", features = ["persistence"] }# Gives us egui, epi and web+native backends

serde = { version = "1", features = ["derive"], optional = true }
caliph = "0.1"

[features]
default = ["persistence"]
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

